Changed name from post to article

--- a/_includes/paginator.html
+++ b/_includes/paginator.html
@@ -1,3 +1,4 @@
+<!-- TODO: Fix navbar -->
 <nav class="pagination">
     <ul>
         {% if paginator.total_pages >= 4 %}{% if paginator.page > 1 %}<li><a href="/">&laquo;</a></li>{% else %}<li class="disabled"><a href="/">&laquo;</a></li>{% endif %}{% endif %}
