--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -6,4 +6,4 @@ footer: true
 ---
 <!-- ================================================================ -->
 <!-- Post -->
-{% include content-post.html %}
+{% include body-content-article.html %}
