--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -6,4 +6,4 @@ footer: true
 ---
 <!-- ================================================================ -->
 <!-- Linklog -->
-{% include content-linklog.html %}
+{% include body-content-linklog.html %}
