--- a/_includes/body-asides.html
+++ b/_includes/body-asides.html
@@ -2,8 +2,8 @@
 <!-- Assides -->
 <div class="container">
 <aside class="well well-small row" id="assides">
-        {% include asides/pinboard.html %}
-        {% include asides/recent_posts.html %}
-        {% include asides/elsewhere.html %}
+        {% include body-asides/pinboard.html %}
+        {% include body-asides/recent_posts.html %}
+        {% include body-asides/elsewhere.html %}
 </aside>
 </div>
