--- a/_includes/posterator.html
+++ b/_includes/posterator.html
@@ -1,12 +1,12 @@
 {% for page in paginator.posts %}
 {% case page.layout %}
-{% when 'post' %}
-{% include content-post.html %}
+{% when 'article' %}
+{% include body-content-article.html %}
 {% when 'linklog' %}
-{% include content-linklog.html %}
+{% include body-content-linklog.html %}
 {% when 'note' %}
-{% include content-note.html %}
+{% include body-content-note.html %}
 {% else %}
-{% include content-post.html %}
+{% include body-content-note.html %}
 {% endcase %}
 {% endfor %}
