Re-factored file names and structure

--- a/_includes/body-aside-pinboard.html
+++ b/_includes/body-aside-pinboard.html
@@ -1,5 +1,5 @@
 <!-- ================================================================ -->
-<!-- Pinboard Asside -->
+<!-- Pinboard Aside -->
 <section class="span4" id="pinboard">
   <h1>Bookmarks</h1>
   <ul id="pinboard_linkroll"><li>Fetching linkroll&#8230;</li></ul>
