--- a/_includes/post-type-linklog.html
+++ b/_includes/post-type-linklog.html
@@ -15,9 +15,9 @@
 </header>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <section class="e-content p-summary">
-{% include content_switch.html %}
+{% include post-logic-content.html %}
 </section>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-{% include post_footer.html %}
+{% include post-footer.html %}
 </article>
 <!--End Linklog "{{ page.title }}"-->
