--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,6 @@
 {% if page.footer == true %}{% include body-footer.html %}{% endif %}
 </div>
 {% endif %}
-{% include js.html %}
+{% include body-js.html %}
 </body>
 </html>
