--- a/_includes/body-asides.html
+++ b/_includes/body-asides.html
@@ -1,9 +1,9 @@
 <!-- ================================================================ -->
-<!-- Assides -->
+<!-- Body Asides -->
 <div class="container">
-<aside class="well well-small row" id="assides">
-        {% include body-asides/pinboard.html %}
-        {% include body-asides/recent_posts.html %}
-        {% include body-asides/elsewhere.html %}
+<aside class="well well-small row" id="asides">
+        {% include body-aside-pinboard.html %}
+        {% include body-aside-recent_posts.html %}
+        {% include body-aside-elsewhere.html %}
 </aside>
 </div>
