--- a/_includes/post-type-note.html
+++ b/_includes/post-type-note.html
@@ -13,7 +13,7 @@
 <section class="e-content p-summary p-name span8">
 <a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>
 
-{% include content_switch.html %}
+{% include post-logic-content.html %}
 
 {% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </section>
