--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -9,6 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--Google webmaster tools-->
     <meta name="google-site-verification" content="-gd5D4qtAADYPG5Iwbl7Z1265Dt6fzf1H5BQItIbsps" />
+    <!--Bing webmaster tools-->
 	<meta name="msvalidate.01" content="8C03EAC159FD742794668D7663E86AED" />
+    <!--Pingbacks-->
     <link rel="pingback" href="http://pingback.me/bcomnes/xmlrpc" />
+    <!--Webmentions-->
     <link rel="http://webmention.org/" href="http://pingback.me/bcomnes/webmention" />
+    <!--Open ID-->
+    <link rel="openid.server" href="http://www.myopenid.com/server" />
+    <link rel="openid.delegate" href="http://bcomnes.myopenid.com/" />
+    <link rel="openid2.local_id" href="http://bcomnes.myopenid.com" />
+    <link rel="openid2.provider" href="http://www.myopenid.com/server" />
+    <meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=bcomnes.myopenid.com" />
