--- a/_includes/body-aside-elsewhere.html
+++ b/_includes/body-aside-elsewhere.html
@@ -1,14 +1,14 @@
-<address class="span4">
-  <h1>Around the Web</h1>
+<section class="span4">
+  <h1>Elsewhere</h1>
   <ul id="around_web">
       <li><i class="icon-envelope"></i> <span class="email"><script type="text/javascript" src="/assets/js/email.js"> </script></span></li>
       <li><i class="icon-home"></i> <a class="url" rel="me" href="http://web.pdx.edu/~bcomnes/">PSU</a></li>
       <li><i class="icon-barcode"></i> <a class="url" rel="me" href="https://github.com/bcomnes">Github</a></li>
       <li><i class="icon-picture"></i> <a class="url" rel="me" href="http://www.flickr.com/people/bretc/">Flickr</a></li>
       <li><i class="icon-user"></i> <a class="url" rel="me" href="http://steamcommunity.com/id/bret/">Steam</a></li>
-      <li><i class="icon-comment"></i> <span class="nickname">bret</span> on <a href="irc://chat.us.freenode.net:+7000">Freenode</a>
+      <li><i class="icon-comment"></i> <span class="nickname">bret</span> on <a href="irc://chat.us.freenode.net">Freenode</a>
           <p><small>IRC messages are pushed to my mobile</small></p></li>
 	  <li>Ƀ: <a href="bitcoin:1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf">1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf</a></li>
 	  <li><i class="icon-fire"></i> <a class="tel" rel="me" href="sms:+17076334552">(707) 633-4552</a></li>
   </ul>
-</address>
+</section>
