--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -3,6 +3,7 @@ layout: default
 asides: false
 tagbox: false
 footer: false
+webmention: true
 ---
 <!-- Note -->
 {% include post-type-note.html %}
