--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,5 +1,6 @@
-{% if post.tagbox or page.tagbox == true or page.syndicate == true  %}<footer>
+{% if post.tagbox or page.tagbox == true or page.syndicate == true or page.wemention == true  %}<footer>
     {% include post-aside-tags.html %}
 	{% include post-aside-crumb.html %}
 	{% include post-aside-syndicate.html %}
+	{% include post-aside-webmention.html %}
 </footer>{% endif %}
