--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -3,6 +3,7 @@ layout: default
 asides: false
 tagbox: true
 footer: true
+webmention: true
 ---
 <!-- ================================================================ -->
 <!-- Linklog -->
