--- a/_includes/body-js.html
+++ b/_includes/body-js.html
@@ -1,5 +1,6 @@
 <!-- ================================================================ -->
 <!-- Le javascript -->
 <!-- Placed at the end of the document so the pages load faster -->
+<script src="/assets/js/webmention.js"></script>
 <script src="/components/jquery/jquery.min.js"></script>
 <script src="/components/bootstrap/docs/assets/js/bootstrap.min.js"></script>
