--- a/_includes/post-aside-webmention.html
+++ b/_includes/post-aside-webmention.html
@@ -1,3 +1,3 @@
-<ul id="http://{{ site.url}}/{{ page.url }}">
-	<li class="webmentions">Hello world</li>
+<ul class="webmentions" id="http://{{ site.url}}{{ page.url }}">
+	<li>Hello world</li>
 </ul>
