--- a/_includes/post-type-note.html
+++ b/_includes/post-type-note.html
@@ -22,7 +22,7 @@
     {% if content %}
 <footer class="span2">
 	<div class="h-card p-author">
-	<p><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-polaroid u-photo" alt="A picture of me!"></p>
+	<p><img src="http://www.gravatar.com/avatar/8d8b82740cb7ca994449cccd1dfdef5f?s=96" class="img-circle u-photo" alt="A picture of me!"></p>
 	<p><a class="p-name fn muted" href="http://{{ site.url }}">{{ site.author }}</a></p>
 	<p><a class="u-url url muted" href="http://{{ site.url }}">{{ site.url }}<!-- This is here to force the hand of your MF2 parser --></a></p>
 	</div>
