--- a/_layouts/linklog.html
+++ b/_layouts/linklog.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-asides: false
 tagbox: true
-footer: true
+breadcrumb: false
 webmention: true
+asides: false
+footer: true
 ---
 <!-- ================================================================ -->
 <!-- Linklog -->
