--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-asides: false
 tagbox: false
-footer: false
+breadcrumb: false
 webmention: true
+asides: false
+footer: false
 ---
 <!-- Note -->
 {% include post-type-note.html %}
