--- a/_includes/post-type-note.html
+++ b/_includes/post-type-note.html
@@ -12,7 +12,7 @@
 	</header>
 <section class="span8">
 <div class="e-content p-summary p-name">
-<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>
+{% if page.in-reply-to-url %}<a class="u-in-reply-to" href="{{ page.in-reply-to-url }}">@{{ page.in-reply-to-title }}</a>{% endif %}
 
 {% include post-logic-content.html %}
 
