Started work to sort by class

--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -1,5 +1,6 @@
 {% case content %}
 {% when nil %}
+{% include post-aside-webmention.html %}
 {% else %}
 {% if page.tagbox == true or page.breadcrumb == true or page.syndicate or page.webmention == true  %}
     {% if page.tagbox == true%}{% include post-aside-tags.html %}{% endif %}
