--- a/_includes/post-type-note.html
+++ b/_includes/post-type-note.html
@@ -18,7 +18,7 @@
 
 {% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </div>
-{% if content %}{% include post-aside-webmention.html %}{% endif %}
+{% include post-aside-webmention.html %}
 </section>
     {% if content %}
 <footer class="span2">
