--- a/_includes/post-type-event.html
+++ b/_includes/post-type-event.html
@@ -1,5 +1,5 @@
 <!--Begin note "{{ page.title }}"-->
-<article class="note h-entry row">
+<article class="note h-event row">
 	<header class="span2">
 	<div>
 	<p class="muted">
