--- a/_includes/index-posterator.html
+++ b/_includes/index-posterator.html
@@ -6,6 +6,8 @@
 {% include post-type-linklog.html %}
 {% when 'note' %}
 {% include post-type-note.html %}
+{% when 'event' %}
+{% include post-type-event.html %}
 {% else %}
 {% include post-type-note.html %}
 {% endcase %}
