--- a/_includes/post-type-note.html
+++ b/_includes/post-type-note.html
@@ -1,14 +1,12 @@
 <!--Begin note "{{ page.title }}"-->
 <article class="note h-entry row">
 	<header class="span2">
-	<div>
 	<p class="muted">
 		<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">
 			{{ page.date | date_to_string }}
 		</time> &bull; {% if content %}{% else %}<a rel="bookmark" class="u-url" href="{{ page.url }}">{% endif %}{{ site.permalink_marker }}{% if content %}{% else %}</a>{% endif %}
 	</p>
-	</p>
-	</div>
+	{% if content %}{% else %}<p><span class='inline'><i class="icon-comment"></i>{% if content %}{% else %}{% include post-aside-webmention.html %}{% endif %}</span></p>{% endif %}
 	</header>
 <section class="span8">
 <div class="e-content p-summary p-name">
@@ -18,8 +16,8 @@
 
 {% if page.rsvp %}<data class="p-rsvp" value="{{ page.rsvp }}">I'm RSVPing "{{ page.rsvp }}"</data>{% endif %}
 </div>
-{% include post-aside-webmention.html %}
-{% if page.syndicate %}{% include post-aside-syndicate.html %}{% endif %}
+{% if content %}{% include post-aside-webmention.html %}{% endif %}
+{% if content %}{% if page.syndicate %}{% include post-aside-syndicate.html %}{% endif %}{% endif %}
 </section>
     {% if content %}
 <footer class="span2">
