--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -19,7 +19,7 @@
     <link rel="openid.delegate" href="http://bcomnes.myopenid.com/" />
     <link rel="openid2.local_id" href="http://bcomnes.myopenid.com" />
     <link rel="openid2.provider" href="http://www.myopenid.com/server" />
-	<!--Open ID-->
+	<!--IndieAuth-->
 	<link rel="indieauth" href="https://indieauth.com">
     <!--<meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=bcomnes.myopenid.com" />-->
     <!--Atom Feed-->
