fixed yaml name

--- a/_includes/post-type-linklog.html
+++ b/_includes/post-type-linklog.html
@@ -3,7 +3,7 @@
 <header>
 <hgroup>
 <h1 class="p-name">
-<a class="u-in-reply-to" href="{{ page.external-url }}">{{ page.title }}</a>
+<a class="u-in-reply-to" href="{{ page.external_url }}">{{ page.title }}</a>
 <span class='linklog-marker'>{{ site.linklog }}</span>
 </h1>
 <h2><small>
