--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -24,3 +24,5 @@
     <!--<meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=bcomnes.myopenid.com" />-->
     <!--Atom Feed-->
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
+    <!--Google analytics-->
+    {% include head-ga.html %}
