Pretied up the outbox

--- a/_includes/body-header-navbar.html
+++ b/_includes/body-header-navbar.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
             </a>
             <a class="brand" href="/">{{ site.brand }}</a>
-            <a class="brand" href="/pages/notifications/">•</a>
+            <a class="brand" href="/pages/inbox/">•</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
                     {% if page.url == "/index.html" %}<li class="active"><a href="#">Blog</a></li>{% else %}<li class=""><a href="/">Blog</a></li>{% endif %}
