--- a/_includes/post-type-linklog.html
+++ b/_includes/post-type-linklog.html
@@ -7,8 +7,7 @@
 <span class='linklog-marker'>{{ site.linklog }}</span>
 </h1>
 <h2><small>
-<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time>
-&bull; {% if content %}{% else %}<a rel="bookmark" class="u-url" href="{{ page.url }}">{% endif %}{{ site.permalink_marker }}{% if content %}{% else %}</a>{% endif %}
+{% if content %}{% else %}<a rel="bookmark" class="u-url" href="{{ page.url }}">{% endif %}<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time>{% if content %}{% else %}</a>{% endif %}</p>
 </small></h2>
 <h3 class="author p-author h-card"><small>{{ page.author }}</small></h3>
 </hgroup>
