--- a/_includes/post-type-event.html
+++ b/_includes/post-type-event.html
@@ -2,9 +2,7 @@
 <article class="note h-event row">
 	<header class="span2">
 	<p class="muted">
-		<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">
-			{{ page.date | date_to_string }}
-		</time> &bull; {% if content %}{% else %}<a rel="bookmark" class="u-url" href="{{ page.url }}">{% endif %}{{ site.permalink_marker }}{% if content %}{% else %}</a>{% endif %}
+		{% if content %}{% else %}<a rel="bookmark" class="u-url" href="{{ page.url }}">{% endif %}<time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date_to_string }}</time>{% if content %}{% else %}</a>{% endif %}</p>
 	</p>
 	{% if content %}{% else %}<p>{% include post-aside-webmention.html %}</p>{% endif %}
 	</header>
