--- a/_includes/body-aside-elsewhere.html
+++ b/_includes/body-aside-elsewhere.html
@@ -10,6 +10,6 @@
           <p><small>IRC messages are pushed to my mobile</small></p></li>
 	  <li>Ƀ: <a href="bitcoin:1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf">1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf</a></li>
 	  <li><i class="icon-fire"></i> <a class="tel" rel="me" href="sms:+17076334552">(707) 633-4552</a></li>
-      <li> <a class="url" rel="me author" href="https://plus.google.com/u/0/107389703693536795409">G+</a></li>
+      <li> <a class="url" rel="me" href="https://plus.google.com/u/0/107389703693536795409">G+</a></li>
   </ul>
 </section>
