Added new indieauth open id info

--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -15,11 +15,8 @@
     <!--Webmentions-->
     <link rel="http://webmention.org/" href="http://pingback.me/bcomnes/webmention" />
     <!--Open ID-->
-    <link rel="openid.server" href="http://www.myopenid.com/server" />
-    <link rel="openid.delegate" href="http://bcomnes.myopenid.com/" />
-    <link rel="openid2.local_id" href="http://bcomnes.myopenid.com" />
-    <link rel="openid2.provider" href="http://www.myopenid.com/server" />
-    <!--<meta http-equiv="X-XRDS-Location" content="http://www.myopenid.com/xrds?username=bcomnes.myopenid.com" />-->
+    <link rel="openid.server" href="https://indieauth.com/openid" />
+    <link rel="openid.delegate" href="http://bret.io/" />
 	<!--IndieAuth-->
 	<link rel="indieauth" href="https://indieauth.com">
     <!--Atom Feed-->
