--- a/_includes/body-aside-elsewhere.html
+++ b/_includes/body-aside-elsewhere.html
@@ -11,5 +11,6 @@
 	  <li>Ƀ: <a href="bitcoin:1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf">1DtDQM65KkrGjVQ8BsCdujZREoJNmt4JJf</a></li>
 	  <li><i class="icon-fire"></i> <a class="tel" rel="me" href="sms:+17076334552">(707) 633-4552</a></li>
       <li> <a class="url" rel="me" href="https://plus.google.com/u/0/107389703693536795409">G+</a></li>
+      <li> <a rel="me" href="web.pdx.edu/~bcomnes">TA Website</a></li>
   </ul>
 </section>
