--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -23,3 +23,5 @@
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!--Google analytics-->
     {% include head-ga.html %}
+    <!--Leaflet Stuff -->
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
