--- a/_includes/post-aside-syndicate.html
+++ b/_includes/post-aside-syndicate.html
@@ -2,8 +2,8 @@
 <p>Syndicated to:</p>
 <ul class="syndicate_box">    
 {% for item in page.syndicate %}
-{% if item.name == 'IndieNews'%}<li><a rel="syndication" href="{{ item.url }}/{{ site.url }}{{ page.url }}">{{ item.name }}</a></li>{% else %}
-<li><a rel="syndication" href="{{ item.url }}">{{ item.name }}</a></li>{% endif %}
+{% if item.name == 'IndieNews'%}<li><a rel="syndication" class="u-syndication" href="{{ item.url }}/{{ site.url }}{{ page.url }}">{{ item.name }}</a></li>{% else %}
+<li><a rel="syndication" class="u-syndication" href="{{ item.url }}">{{ item.name }}</a></li>{% endif %}
 {% endfor %}
 </ul>
 {% endif %}
