Bootshamed the button

--- a/_includes/body-aside-recent_posts.html
+++ b/_includes/body-aside-recent_posts.html
@@ -7,5 +7,5 @@
       </li>
     {% endfor %}
   </ul>
-  <input type="button" onclick="(function(btn){var z=document.createElement('script');document.subtomeBtn=btn;z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})(this)" value="Subscribe">
+  <input class="btn btn-warning btn-mini" type="button" onclick="(function(btn){var z=document.createElement('script');document.subtomeBtn=btn;z.src='https://www.subtome.com/load.js';document.body.appendChild(z);})(this)" value="Subscribe">
 </section>
