--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -24,4 +24,6 @@
     <!--Google analytics-->
     {% include head-ga.html %}
     <!--Leaflet Stuff -->
+    <!--TODO Figure this out-->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
+    {% if page.deleted %}<meta http-equiv="Status" content="410 GONE"/>{% endif %}
