--- a/_includes/index-posterator.html
+++ b/_includes/index-posterator.html
@@ -8,6 +8,7 @@
 {% include post-type-note.html %}
 {% when 'event' %}
 {% include post-type-event.html %}
+{% when 'deleted' %}
 {% else %}
 {% include post-type-note.html %}
 {% endcase %}
