Updated webmention meta name to reflect new spec

--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -13,7 +13,7 @@
     <!--Pingbacks-->
     <link rel="pingback" href="http://pingback.me/bcomnes/xmlrpc" />
     <!--Webmentions-->
-    <link rel="http://webmention.org/" href="http://pingback.me/bcomnes/webmention" />
+    <link rel="webmention" href="http://pingback.me/bcomnes/webmention" />
     <!--Open ID-->
     <link rel="openid.server" href="https://indieauth.com/openid" />
     <link rel="openid.delegate" href="http://bret.io/" />
