--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -14,6 +14,8 @@
     <link rel="pingback" href="http://pingback.me/bcomnes/xmlrpc" />
     <!--Webmentions-->
     <link rel="webmention" href="http://pingback.me/bcomnes/webmention" />
+    <!--Micropub Endpoint-->
+    <link rel="micropub" href="https://ghpub.herokuapp.com" />
     <!--Open ID-->
     <link rel="openid.server" href="https://indieauth.com/openid" />
     <link rel="openid.delegate" href="http://bret.io/" />
