--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -14,13 +14,15 @@
     <link rel="pingback" href="http://pingback.me/bcomnes/xmlrpc" />
     <!--Webmentions-->
     <link rel="webmention" href="http://pingback.me/bcomnes/webmention" />
-    <!--Micropub Endpoint-->
-    <link rel="micropub" href="https://ghpub.herokuapp.com" />
     <!--Open ID-->
     <link rel="openid.server" href="https://indieauth.com/openid" />
     <link rel="openid.delegate" href="http://bret.io/" />
-	<!--IndieAuth-->
-	<link rel="indieauth" href="https://indieauth.com">
+	<!--OAuth Endpoint-->
+	<link rel="authorization_endpoint" href="https://indieauth.com/auth">
+    <!--Token Endpoint-->
+    <link rel="token_endpoint" href="https://bret.io/token">
+    <!--Micropub Endpoint-->
+    <link rel="micropub" href="https://ghpub.herokuapp.com" />
     <!--Atom Feed-->
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!--Google analytics-->
