Updated micropub and token endpoint

--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -20,9 +20,9 @@
 	<!--OAuth Endpoint-->
 	<link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <!--Token Endpoint-->
-    <link rel="token_endpoint" href="https://bret.io/token">
+    <link rel="token_endpoint" href="https://tokens.oauth.net/token">
     <!--Micropub Endpoint-->
-    <link rel="micropub" href="https://ghpub.herokuapp.com" />
+    <link rel="micropub" href="https://ugitpub.herokuapp.com" />
     <!--Atom Feed-->
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!--Google analytics-->
