--- a/assets/css/shame.css
+++ b/assets/css/shame.css
@@ -221,3 +221,12 @@ article.linklog-marker {
 #map {
     height: 200px;
 }
+
+/* audio stuff */
+
+audio {
+	top: 0px;
+	left: 0px;
+    	width: 100%;
+    	height: 100%;
+}
