Changed micropub endpoint

--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -22,7 +22,7 @@
     <!--Token Endpoint-->
     <link rel="token_endpoint" href="https://tokens.oauth.net/token">
     <!--Micropub Endpoint-->
-    <link rel="micropub" href="https://ugitpub.herokuapp.com" />
+    <link rel="micropub" href="https://ugitpub.herokuapp.com/micropub" />
     <!--Atom Feed-->
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!--Google analytics-->
