--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
 </header>
 
 <section class="container">
+<div class="alert alert-error">A jekyll <a href="https://github.com/jekyll/jekyll/pull/2705">bug</a> broke a bunch of permalinks.  Fix coming shortly.</div>
 {{ content }}
 </section>
 
