--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 </header>
 
 <section class="container">
-<div class="alert alert-error">A jekyll <a href="https://github.com/jekyll/jekyll/pull/2705">bug</a> broke a bunch of permalinks.  Fix coming shortly.</div>
+<div class="alert alert-error">A jekyll <a href="https://github.com/jekyll/jekyll/pull/2705">bug</a> broke a bunch of permalinks.  Fix coming shortly.  If you 404, try remving the trailing slash and adding .html to the url.</div>
 {{ content }}
 </section>
 
