--- a/_includes/body-js.html
+++ b/_includes/body-js.html
@@ -2,8 +2,8 @@
 <!-- Le javascript -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="/assets/js/webmention.js"></script>
-<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="/components/bootstrap/docs/assets/js/bootstrap.min.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="http://assets.annotateit.org/annotator/v1.2.9/annotator-full.min.js"></script>
 <link rel="stylesheet" href="http://assets.annotateit.org/annotator/v1.2.9/annotator.min.css">
 <script type="text/javascript">
