--- a/_includes/index-posterator.html
+++ b/_includes/index-posterator.html
@@ -1,4 +1,5 @@
 {% for page in paginator.posts %}
+{% if page.hidden != true %}
 {% case page.layout %}
 {% when 'article' %}
 {% include post-type-article.html %}
@@ -14,4 +15,5 @@
 {% else %}
 {% include post-type-note.html %}
 {% endcase %}
+{% endif %}
 {% endfor %}
