--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -25,6 +25,11 @@
     <link rel="micropub" href="https://ugitpub.herokuapp.com/micropub" />
     <!--Atom Feed-->
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
+    <!--Pubsubhubbub-->
+    {% if page.index %}
+    <link type="application/atom+xml" rel="self" href="http://{{ site.url }}/index.html"/>
+    <link href="https://pubsubhubbub.superfeedr.com" rel="hub"/>
+    {% endif %}
     <!--Google analytics-->
     {% include head-ga.html %}
     <!--Leaflet Stuff -->
