--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -27,7 +27,7 @@
     <link rel="alternate" type="application/atom+xml" title="Atom" href="/atom.xml" />
     <!--Pubsubhubbub-->
     {% if page.index %}
-    <link type="application/atom+xml" rel="self" href="http://{{ site.url }}/index.html"/>
+    <link type="application/atom+xml" rel="self" href="http://{{ site.url }}"/>
     <link href="https://pubsubhubbub.superfeedr.com" rel="hub"/>
     {% endif %}
     <!--Google analytics-->
