--- a/_includes/body-footer.html
+++ b/_includes/body-footer.html
@@ -2,7 +2,7 @@
 <!-- Footer -->
 <footer class="footer">
     <address class="container">
-            <p class="muted credit">Currently being assembled by <a class="fn url" href="/about">{{ site.author }}</a>.</p>
+            <p class="muted credit">In a state of Jekyll stagnation <a class="fn url" href="/about">{{ site.author }}</a></p>
             <p class="muted credit">View the website <a href="https://github.com/bcomnes/bcomnes.github.com">source</a></p>
     </address>   
 </footer>
