--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -20,7 +20,7 @@
 	<!--OAuth Endpoint-->
 	<link rel="authorization_endpoint" href="https://indieauth.com/auth">
     <!--Token Endpoint-->
-    <link rel="token_endpoint" href="https://tokens.oauth.net/token">
+    <link rel="token_endpoint" href="https://tokens.indieauth.com">
     <!--Micropub Endpoint-->
     <link rel="micropub" href="https://ugitpub.herokuapp.com/micropub" />
     <!--Atom Feed-->
