--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
 {% include body-header-navbar.html %}
 </header>
 
-<section class="container">
+<main>
 {{ content }}
-</section>
+</main>
 
 {% if page.asides == true or page.footer == true %}
 <div class="vcard">
