--- a/_includes/head-css.html
+++ b/_includes/head-css.html
@@ -1,10 +1,2 @@
-    <!-- Le styles -->
-    <link href="/components/bootstrap/docs/assets/css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap modifications reside between bootstrap.min.css and bootstrap-responsive.min.css-->
-    <link href="/assets/css/shame.css" rel="stylesheet">
-    <link href="/assets/css/syntax.css" rel="stylesheet">
-    <link href="/components/bootstrap/docs/assets/css/bootstrap-responsive.css" rel="stylesheet">
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
