--- a/_includes/head-meta.html
+++ b/_includes/head-meta.html
@@ -36,3 +36,6 @@
     <!--TODO Figure this out-->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
     {% if page.deleted %}<meta http-equiv="Status" content="410 GONE"/>{% endif %}
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    
